--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/izhar850.github.io/Tikkk/static/js/main.ab2d1911.js"></script><link href="/izhar850.github.io/Tikkk/static/css/main.70833d25.css" rel="stylesheet"></head><div id="root"></div>
+<head><script defer="defer" src="/izhar850.github.io/TikDis/static/js/main.d36b7695.js"></script><link href="/izhar850.github.io/TikDis/static/css/main.70833d25.css" rel="stylesheet"></head><div id="root"></div>
